--- a/victim.html
+++ b/victim.html
@@ -84,7 +84,7 @@
   </style>
 
   <div id="video-wrapper">
-    <video aria-hidden="true" id="video-player">
+    <video aria-hidden="true" id="video-player"autoplay loop muted>
       <source
         src="https://github.com/yukiko0113/Vtm_hunt/raw/refs/heads/main/img/Victim_clean.webm"
         type="video/webm"
