--- a/Blood.html
+++ b/Blood.html
@@ -1,143 +1,151 @@
 <form id="Blood_form">
-    <style>
-      .debug {
-        border: 1px solid red;
-      }
-  
-      #video-wrapper {
-        position: absolute;
-        z-index: 10;
-        margin-left: -300px;
-      }
-  
-      #video-player {
-        width: 1200px;
-      }
-  
-      .scrollbar {
-        width: 300px;
-        height: 100px;
-        overflow-y: scroll;
-        scrollbar-color: black gray;
-        scrollbar-width: thin;
-      }
-  
-      #contenu {
-        z-index: 20;
-        position: absolute;
-        width: 245px;
-        margin-left: 205px;
-        margin-top: 200px;
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        font-size: 0.9em;
-      }
-  
-      #Blood {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        font-weight: 700;
-        color: rgb(202, 0, 0);
-        background-image: url("https://github.com/yukiko0113/Vtm_hunt/raw/refs/heads/main/img/Ligne_et_cercle_blood.png");
-        background-position-y: center;
-        background-size: 100%;
-        background-repeat: no-repeat;
-      }
-  
-      #ambient {
-        display: flex;
-        justify-content: center;
-        font-style: italic;
-      }
-  
-      #apparence {
-        display: flex;
-        justify-content: center;
-        font-weight: 500;
-      }
-  
-      #description {
-        display: flex;
-        justify-content: center;
-        padding-inline: 10px;
-        margin-top: -20px;
-      }
-  
-      #button-container {
-        margin-top: 20px;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        background-image: url("https://github.com/yukiko0113/Vtm_hunt/raw/refs/heads/main/img/bouton.webp");
-        background-repeat: no-repeat;
-        background-position-x: center;
-        background-position-y: center;
-        background-size: 70%;
-        height: 55px;
-        font-weight: 500;
-        font-size: 1.3em;
-      }
-  
-      #button-container:hover {
-        color: rgb(202, 0, 0);
-      }
-      
-      #serapation {
-        margin-top: 20px;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-      }
-        
-    </style>
-  
-    <div id="video-wrapper">
-      <video aria-hidden="true" id="video-player" autoplay loop muted>
-        <source
-          src="https://github.com/yukiko0113/Vtm_hunt/raw/refs/heads/main/img/Blood_clean.webm"
-          type="video/webm"
-        />
-      </video>
-    </div>
-  
-    <div id="contenu">
-      <div id="Blood">
-        <h1>0</h1>
-      </div>
-      <div id="ambient">
-        <p>"Tester c'est douter"</p>
-        <img id="serapation" src="https://github.com/yukiko0113/Vtm_hunt/raw/refs/heads/main/img/Ligne_3_1.png"/>
-      <div id="description">
-        <p class="scrollbar">
-          Description de la victime avec un très long Ut ut no eos vero invidunt
-          aliquyam stet ut sea stet nulla et. Sed amet vulputate nonumy minim
-          consectetuer sit et stet vel sadipscing. Nulla consetetur sanctus amet
-          eum consetetur. Justo ipsum iriure rebum at kasd esse et erat lorem
-          magna sea dolores diam erat sit duo. Magna sadipscing illum soluta
-          ullamcorper diam id magna at hendrerit. Sanctus amet eu erat iusto lorem
-          eos consectetuer dolore nulla sit eos et consequat. Ipsum accumsan elitr
-          vero.
-        </p>
-      </div>
-      <script>
-        function setPhase(phase) {
-          document.getElementById('button-container').value = phase;
-    $('#dialog-redirect').val('_drink');
-          $('#Blood_form').submit();
-        }
- <script>
+  <style>
+    .debug {
+      border: 1px solid red;
+    }
+
+    #video-wrapper {
+      position: absolute;
+      z-index: 10;
+      margin-left: -300px;
+    }
+
+    #video-player {
+      width: 1200px;
+    }
+
+    .scrollbar {
+      width: 300px;
+      height: 100px;
+      overflow-y: scroll;
+      scrollbar-color: black gray;
+      scrollbar-width: thin;
+    }
+
+    #contenu {
+      z-index: 20;
+      position: absolute;
+      width: 245px;
+      margin-left: 205px;
+      margin-top: 200px;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      font-size: 0.9em;
+    }
+
+    #Blood {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      font-weight: 700;
+      color: rgb(202, 0, 0);
+      background-image: url("https://github.com/yukiko0113/Vtm_hunt/raw/refs/heads/main/img/Ligne_et_cercle_blood.png");
+      background-position-y: center;
+      background-size: 100%;
+      background-repeat: no-repeat;
+    }
+
+    #ambient {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      font-style: italic;
+    }
+
+    #apparence {
+      display: flex;
+      justify-content: center;
+      font-weight: 500;
+    }
+
+    #description {
+      display: flex;
+      justify-content: center;
+      padding-inline: 10px;
+      margin-top: -20px;
+    }
+
+    #button-container {
+      margin-top: 20px;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      background-image: url("https://github.com/yukiko0113/Vtm_hunt/raw/refs/heads/main/img/bouton.webp");
+      background-repeat: no-repeat;
+      background-position-x: center;
+      background-position-y: center;
+      background-size: 70%;
+      height: 55px;
+      font-weight: 500;
+      font-size: 1.3em;
+      border: none;
+      outline: none;
+      background-color: transparent;
+      box-shadow: none;
+    }
+
+    #button-container:hover {
+      color: rgb(202, 0, 0);
+    }
+
+    #serapation {
+      margin-top: 20px;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+    }
+  </style>
+
+  <script>
+    function setPhase(phase) {
+      document.getElementById("button-container").value = phase;
+      $("#dialog-redirect").val("_drink");
+      $("#Blood_form").submit();
+    }
+
     function setPhase() {
-$('#dialog-redirect').val('_drink');
-      $('#hunt_form').submit();
-$self.close()
+      $("#dialog-redirect").val("_drink");
+      $("#hunt_form").submit();
+      $self.close();
     }
   </script>
-  <input type="hidden" id="dialog-redirect" name="goto" />
-  <button style="border: none;
-        outline: none;
-        background-color: transparent;
-        box-shadow:none;" 
-        id="button-container" type="button" onclick="setPhase()">DRINK</button>
-  </form>
+
+  <div id="video-wrapper">
+    <video aria-hidden="true" id="video-player" autoplay loop muted>
+      <source
+        src="https://github.com/yukiko0113/Vtm_hunt/raw/refs/heads/main/img/Blood_clean.webm"
+        type="video/webm"
+      />
+    </video>
+  </div>
+
+  <div id="contenu">
+    <div id="Blood">
+      <h1>0</h1>
+    </div>
+    <div id="ambient">
+      <p>"Tester c'est douter"</p>
+      <img
+        id="serapation"
+        src="https://github.com/yukiko0113/Vtm_hunt/raw/refs/heads/main/img/Ligne_3_1.png"
+      />
+    </div>
+    <div id="description">
+      <p class="scrollbar">
+        Description de la victime avec un très long Ut ut no eos vero invidunt
+        aliquyam stet ut sea stet nulla et. Sed amet vulputate nonumy minim
+        consectetuer sit et stet vel sadipscing. Nulla consetetur sanctus amet
+        eum consetetur. Justo ipsum iriure rebum at kasd esse et erat lorem
+        magna sea dolores diam erat sit duo. Magna sadipscing illum soluta
+        ullamcorper diam id magna at hendrerit. Sanctus amet eu erat iusto lorem
+        eos consectetuer dolore nulla sit eos et consequat. Ipsum accumsan elitr
+        vero.
+      </p>
+    </div>
+    <input type="hidden" id="dialog-redirect" name="goto" />
+    <button id="button-container" type="button" onclick="setPhase()">
+      DRINK
+    </button>
+  </div>
+</form>
