--- a/victim.html
+++ b/victim.html
@@ -98,10 +98,11 @@
       </div>
       <div id="ambient">
         <p>"Tester c'est douter"</p>
-      </div id="apparence">
-      <h2>APPARENCE</h2>
+      </div>
+      <div id="apparence">
+        <h2>APPARENCE</h2></div>
       <div id="description">
-        <i>Durant votre chasse vous rencontrez ^^#nom^^ , iel sera votre Calice de ce soir. Vos crocs planter, son sang à  ^^#Calice^^ </i>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </p>
       </div>
       <script>
         function setPhase(phase) {
