--- a/victim.html
+++ b/victim.html
@@ -111,14 +111,13 @@
           $('#hunt_form').submit();
         }
  <script>
-  function setPhase() {
-    $('#dialog-redirect').val('_drink');
-    $('#hunt_form').submit();
-    $self.close()
-  }
+    function setPhase() {
+$('#dialog-redirect').val('_drink');
+      $('#hunt_form').submit();
+    }
   </script>
   <input type="hidden" id="dialog-redirect" name="goto" />
-  <button class="header-button control close" style="border: none;
+  <button style="border: none;
         outline: none;
         background-color: transparent;
         box-shadow:none;" 
