--- a/victim.html
+++ b/victim.html
@@ -2,7 +2,7 @@
 <head>
     <meta charset="utf-8">
     <title>Ma page</title>
-    <link href="style_victim.css" rel="stylesheet">
+    <link href="style/style_victim.css" rel="stylesheet">
 </head>  
     <div id="video-wrapper">
       <video aria-hidden="true" id="video-player" autoplay loop muted>
