--- a/victim.html
+++ b/victim.html
@@ -1,125 +1,140 @@
 <form id="hunt_form">
-    <style>
-      .debug {
-        border: 1px solid red;
-      }
-  
-      #video-wrapper {
-        position: absolute;
-        z-index: 10;
-        margin-left: -300px;
-      }
-  
-      #video-player {
-        width: 1200px;
-      }
-  
-      .scrollbar {
-        width: 300px;
-        height: 100px;
-        overflow-y: scroll;
-        scrollbar-color: black gray;
-        scrollbar-width: thin;
-      }
-  
-      #contenu {
-        z-index: 20;
-        position: absolute;
-        width: 245px;
-        margin-left: 205px;
-        margin-top: 200px;
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        font-size: 0.9em;
-      }
-  
-      #nom {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        font-weight: 700;
-        background-image: url("https://github.com/yukiko0113/Vtm_hunt/raw/refs/heads/main/img/bouton.webp");
-        background-position-y: center;
-        background-size: 100%;
-      }
-  
-      #ambient {
-        display: flex;
-        justify-content: center;
-        font-style: italic;
-      }
-  
-      #apparence {
-        display: flex;
-        justify-content: center;
-        font-weight: 500;
-      }
-  
-      #description {
-        display: flex;
-        justify-content: center;
-        padding-inline: 10px;
-        margin-top: -20px;
-      }
-  
-      #button-container {
-        margin-top: 20px;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        background-image: url("https://github.com/yukiko0113/Vtm_hunt/raw/refs/heads/main/img/bouton.webp");
-        background-repeat: no-repeat;
-        background-position-x: center;
-        background-position-y: center;
-        background-size: 70%;
-        height: 55px;
-        font-weight: 500;
-        font-size: 1.3em;
-      }
-  
-      #button-container:hover {
-        color: rgb(202, 0, 0);
-      }
-    </style>
-  
-    <div id="video-wrapper">
-      <video aria-hidden="true" id="video-player" autoplay loop muted>
-        <source
-          src="https://github.com/yukiko0113/Vtm_hunt/raw/refs/heads/main/img/Victim_clean.webm"
-          type="video/webm"
-        />
-      </video>
-    </div>
-  
-    <div id="contenu">
-      <div id="nom">
-        <h1>MI-KYONG</h1>
-      </div>
-      <div id="ambient">
-        <p>"Tester c'est douter"</p>
-      </div>
-      <div id="apparence">
-        <h2>APPARENCE</h2></div>
-      <div id="description">
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </p>
-      </div>
-      <script>
-        function setPhase(phase) {
-          document.getElementById('button-container').value = phase;
-    $('#dialog-redirect').val('_drink');
-          $('#hunt_form').submit();
-        }
- <script>
+  <style>
+    .debug {
+      border: 1px solid red;
+    }
+
+    #video-wrapper {
+      position: absolute;
+      z-index: 10;
+      margin-left: -300px;
+    }
+
+    #video-player {
+      width: 1200px;
+    }
+
+    .scrollbar {
+      width: 300px;
+      height: 100px;
+      overflow-y: scroll;
+      scrollbar-color: black gray;
+      scrollbar-width: thin;
+    }
+
+    #contenu {
+      z-index: 20;
+      position: absolute;
+      width: 245px;
+      margin-left: 205px;
+      margin-top: 200px;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      font-size: 0.9em;
+    }
+
+    #nom {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      font-weight: 700;
+      background-image: url("https://github.com/yukiko0113/Vtm_hunt/raw/refs/heads/main/img/bouton.webp");
+      background-position-y: center;
+      background-size: 100%;
+    }
+
+    #ambient {
+      display: flex;
+      justify-content: center;
+      font-style: italic;
+    }
+
+    #apparence {
+      display: flex;
+      justify-content: center;
+      font-weight: 500;
+    }
+
+    #description {
+      display: flex;
+      justify-content: center;
+      padding-inline: 10px;
+      margin-top: -20px;
+    }
+
+    #button-container {
+      margin-top: 20px;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      background-image: url("https://github.com/yukiko0113/Vtm_hunt/raw/refs/heads/main/img/bouton.webp");
+      background-repeat: no-repeat;
+      background-position-x: center;
+      background-position-y: center;
+      background-size: 70%;
+      height: 55px;
+      font-weight: 500;
+      font-size: 1.3em;
+    }
+
+    #button-container:hover {
+      color: rgb(202, 0, 0);
+    }
+  </style>
+
+  <script>
+    function setPhase(phase) {
+      document.getElementById("button-container").value = phase;
+      $("#dialog-redirect").val("_drink");
+      $("#hunt_form").submit();
+    }
     function setPhase() {
-$('#dialog-redirect').val('_drink');
-      $('#hunt_form').submit();
+      $("#dialog-redirect").val("_drink");
+      $("#hunt_form").submit();
     }
   </script>
-  <input type="hidden" id="dialog-redirect" name="goto" />
-  <button style="border: none;
+
+  <div id="video-wrapper">
+    <video aria-hidden="true" id="video-player" autoplay loop muted>
+      <source
+        src="https://github.com/yukiko0113/Vtm_hunt/raw/refs/heads/main/img/Victim_clean.webm"
+        type="video/webm"
+      />
+    </video>
+  </div>
+
+  <div id="contenu">
+    <div id="nom">
+      <h1>MI-KYONG</h1>
+    </div>
+    <div id="ambient">
+      <p>"Tester c'est douter"</p>
+    </div>
+    <div id="apparence">
+      <h2>APPARENCE</h2>
+    </div>
+    <div id="description">
+      <p>
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
+        tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
+        veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
+        commodo consequat.
+      </p>
+    </div>
+    <input type="hidden" id="dialog-redirect" name="goto" />
+    <button
+      style="
+        border: none;
         outline: none;
         background-color: transparent;
-        box-shadow:none;" 
-        id="button-container" type="button" onclick="setPhase()">DRINK</button>
-  </form>
+        box-shadow: none;
+      "
+      id="button-container"
+      type="button"
+      onclick="setPhase()"
+    >
+      DRINK
+    </button>
+  </div>
+</form>
