--- a/Blood.html
+++ b/Blood.html
@@ -77,7 +77,7 @@
       background-position-y: center;
       background-size: 70%;
       font-weight: 500;
-      font-size: 1.0em;
+      font-size: 1em;
       border: none;
       outline: none;
       background-color: transparent;
@@ -94,7 +94,7 @@
       justify-content: center;
       align-items: center;
     }
-     #separation-x {
+    #separation-x {
       transform: scaleY(-1);
       margin-top: 20px;
       border: none;
@@ -104,10 +104,10 @@
     }
   </style>
 
- <script>
+  <script>
     function setPhase() {
-$('#dialog-redirect').val('_dead');
-      $('#Blood_form').submit();
+      $("#dialog-redirect").val("_dead");
+      $("#Blood_form").submit();
     }
   </script>
   <div id="video-wrapper">
@@ -124,34 +124,61 @@ $('#dialog-redirect').val('_dead');
       <h1>0</h1>
     </div>
     <div id="ambient">
-      <p>Goût du sang et de la disgracie Lorem ipsum dolor sit amet,Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
+      <p>
+        Goût du sang et de la disgracie Lorem ipsum dolor sit amet,Lorem ipsum
+        dolor sit amet, consectetur adipiscing elit
+      </p>
       <img
         id="separation"
         src="https://github.com/yukiko0113/Vtm_hunt/raw/refs/heads/main/img/Ligne_3_1.png"
       />
     </div>
     <div>
-      <p> Description de l'effet mécanique Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt</p></div> 
-   <img
-        id="separation-x"
-        src="https://github.com/yukiko0113/Vtm_hunt/raw/refs/heads/main/img/Ligne_2.png"
-        />
-<input type="hidden" id="dialog-redirect" name="goto" />
-    <button class="header-button control close" id="button-container" type="button" onclick="setPhase()">
+      <p>
+        Description de l'effet mécanique Lorem ipsum dolor sit amet, consectetur
+        adipiscing elit, sed do eiusmod tempor incididunt
+      </p>
+    </div>
+    <img
+      id="separation-x"
+      src="https://github.com/yukiko0113/Vtm_hunt/raw/refs/heads/main/img/Ligne_2.png"
+    />
+    <input type="hidden" id="dialog-redirect" name="goto" />
+    <button
+      class="header-button control close"
+      id="button-container"
+      type="button"
+      onclick="setPhase()"
+    >
       [Kill it]
     </button>
-    <button class="header-button control close" id="button-container" type="button" onclick="setPhase()">
+    <button
+      class="header-button control close"
+      id="button-container"
+      type="button"
+      onclick="setPhase()"
+    >
       [Kill it]
     </button>
-        <button class="header-button control close" id="button-container" type="button" onclick="setPhase()">
+    <button
+      class="header-button control close"
+      id="button-container"
+      type="button"
+      onclick="setPhase()"
+    >
       [Kill it]
     </button>
-        <button class="header-button control close" id="button-container" type="button" onclick="setPhase()">
+    <button
+      class="header-button control close"
+      id="button-container"
+      type="button"
+      onclick="setPhase()"
+    >
       [Kill it]
     </button>
-   <img
-        id="separation"
-        src="https://github.com/yukiko0113/Vtm_hunt/raw/refs/heads/main/img/Ligne_2.png"
-        />
+    <img
+      id="separation"
+      src="https://github.com/yukiko0113/Vtm_hunt/raw/refs/heads/main/img/Ligne_2.png"
+    />
   </div>
 </form>
