--- a/victim.html
+++ b/victim.html
@@ -1,5 +1,18 @@
 <form id="hunt_form">
   <style>
+    .window-content {
+      background: none;
+    }
+
+    h1,
+    h2 {
+      border-bottom: none;
+    }
+
+    h2 {
+      margin-bottom: 20px;
+    }
+
     .debug {
       border: 1px solid red;
     }
