--- a/victim.html
+++ b/victim.html
@@ -120,7 +120,7 @@
 
   <div id="contenu">
     <div id="nom">
-      <h1>MI-KYONG</h1>
+      <h1>Archetype</h1>
     </div>
     <div id="ambient">
       <p>"Tester c'est douter"</p>
@@ -131,9 +131,8 @@
     <div id="description">
       <p>
         <i
-          >Durant votre chasse vous rencontrez <span id="nomRandom"></span>, iel
-          sera votre Calice de ce soir. Vos crocs planter, son sang à
-          ^^#Calice^^
+          >Durant votre chasse vous avez rencontrez <b><span id="nomRandom"></span></b>, une proie de choix.
+          Ce qui vous à marquez dans votre traque, c'est <b><span id="traitRandom"></span></b>.
         </i>
       </p>
     </div>
